--- a/styles.css
+++ b/styles.css
@@ -1,50 +1,94 @@
 body {
-    color: white;
+    color: black;
     margin: 0;
-   
 
 }
 
 div {
-    border: solid black 2px;
-    /* padding-left: 10%; */
-    /* padding-right: 10%; */
+    border: solid red 2px;
 }
 
-#content {
-    display: flex;
-    flex-direction: column;
+
+
+/* header */
+#header,
+#footer {
+    background-color: #1F2937;
+    color: #F9FAF8;
     
 }
-
-#header {
-background-color: #1F2937;
-
-}
-
 #header-content {
-    display: flex;
-    flex-direction: column;
-    align-items: space-around;
+    padding-left: 20%;
+    padding-right: 20%;
 }
-
 #header-bar {
     display: flex;
     justify-content: space-between;
 }
-
 #header-links-right {
     display: flex;
     gap: 16px;
 }
-
 #main-title {
     display: flex;
     justify-content: space-between;
-
+    align-items: center;
+}
+#main-title-left h1 {
+    font-size: 48px;
+    font-weight: bolder;
+    
+}
+#main-title-left p {
+    font-size: 18px;
+    color: #E5E7EB;
 }
 
-#footer {
-    background-color: #1F2937;
+#header-bar h2 {
+    font-size: 24px;
+    color: #F9FAF8;
 }
+#signup-main {
+    background-color: #3882F6;
+}
+
+
+/* Info */
+#info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#info-content{
+    padding-left: 20%;
+    padding-right: 20%;
+    
+}
+#info-header{
+    /* display: flex; */
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    display: flex;
+    justify-content: center;
+}
+
+#images {
+    display: flex;
+    justify-content: space-around;
+    gap: 150px;
+}
+
+
+/* Quote */
+#quote-section {
+    background-color: #E5E7EB;
+    color: #1F2937;
+}
+
+
+/* Call to action */
+
+
+/* footer */
 
