--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 div {
-    border: solid red 2px;
+    /* border: solid black 2px; */
 }
 
 
@@ -18,6 +18,7 @@ div {
     
 }
 #header-content {
+    
     padding-left: 20%;
     padding-right: 20%;
 }
@@ -32,11 +33,13 @@ div {
 #main-title {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 #main-title-left h1 {
     font-size: 48px;
-    font-weight: bolder;
+    font-weight: 800;
+    color: #F9FAF8;
     
 }
 #main-title-left p {
@@ -50,6 +53,13 @@ div {
 }
 #signup-main {
     background-color: #3882F6;
+    border-color: #3882F6;
+    color: white;
+    padding: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    
+    border-radius: 5px ;
 }
 
 
@@ -62,21 +72,40 @@ div {
 #info-content{
     padding-left: 20%;
     padding-right: 20%;
+    /* padding-top: 50px; */
+    padding-bottom: 50px;
     
 }
 #info-header{
-    /* display: flex; */
     font-size: 36px;
-    font-weight: bolder;
+    font-weight: 800;
     color: #1F2937;
     display: flex;
     justify-content: center;
+    
 }
 
 #images {
     display: flex;
     justify-content: space-around;
-    gap: 150px;
+}
+
+.info-img {
+    width: 100px;
+    height: 100px;
+    border: solid #3882F6 3px;
+    border-radius: 10px;
+}
+
+.img-caption-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+.img-caption{
+    margin-left: 15%;
+    margin-right: 15%;
 }
 
 
@@ -85,10 +114,56 @@ div {
     background-color: #E5E7EB;
     color: #1F2937;
 }
+#quote-content{
+    padding: 50px;
+    padding-left: 20%;
+    padding-right: 20%;
+    
+
+}
+#quote-content h3 {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+    color: #1F2937;
+}
+#quote-author {
+    text-align: end;
+}
 
 
 /* Call to action */
+#call-to-action {
+    display: flex;
+    justify-content: center;
+    padding: 50px;
+}
+#call-to-action-content {
+    display: flex;
+    background-color: #3882F6;
+    color: white;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 5px;
+    padding: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 750px;
+    
+}
+#signup-bottom {
+    background-color: #3882F6;
+    border: solid white 2px;
+    border-radius: 6px;
+    width: 100px;
+    height: 25px;
+    color: white;
 
-
+    
+}
 /* footer */
+#footer {
+    padding: 15px;
+    text-align: center;
+}
 
