changed header and footer colour to green

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ div {
 /* header */
 #header,
 #footer {
-    background-color: #1F2937;
+    background-color: #1f372d;
     color: #F9FAF8;
     
 }
